# atsp-approximation

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  test.sh
instances/: .gitignore
lib/msa/: .gitignore  msa.cpp
lib/vertexcoverfpt_code/: pom.xml
lib/vertexcoverfpt_code/src/main/java/fpt/: AdvancedSolver.java  Main.java  PartialSolution.java  ReductionRule.java  SimpleSolver.java  VCSolver.java
src/: check_symmetry_metric.py  christofides.py  concorde_wrapper.py  graph.py  held_karp.py  jonker_volgenant.py  main.py  msa_wrapper.py  parser.py  treedoubling.py  util.py  vc_wrapper.py  vertex_cover.py
src/r_plotting/: helper.R  merge_tables.py  new_plots.R  python_plot_in.R
src/scripts/: plot_results.py  run_experiments.sh  table.py
